Local commit